# Music-Platform

./: .env.exmple  .gitignore  RESULTS.md  celerybeat-schedule.bak  celerybeat-schedule.dir  conftest.py  db.sqlite3  pyproject.toml  requirements.txt  runCelery.bat  runCelery2.bat
accounts/: url.py  views.py
albums/: admin.py  apps.py  forms.py  models.py  serializers_album.py  signals.py  tasks.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_alter_album_cost.py  0002_alter_album_release_datetime.py  0002_delete_album.py  0002_initial.py  0002_song.py  0003_album.py  0003_auto_20221021_2134.py  0004_alter_album_id_alter_song_id.py  0004_auto_20221006_2345.py  0005_album_approved.py  0005_auto_20221009_1714.py  0006_auto_20221009_0133.py  0006_auto_20221009_1718.py  0006_auto_20221017_0256.py  0007_auto_20221009_1752.py  0008_album_approved.py  0009_auto_20221009_1827.py  0010_auto_20221010_0032.py  0011_auto_20221012_1853.py
albums/music/: pyproject.toml
albums/tests/: test_endpoints.py  test_serializers.py  test_views.py
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
artists/migrations/: 0001_initial.py  0002_auto_20221006_1651.py  0002_auto_20221018_0122.py  0002_initial.py  0003_alter_artists_id.py  0003_alter_artists_user.py  0003_auto_20221006_1654.py  0004_alter_artists_user.py  0004_auto_20221006_1655.py  0004_auto_20221021_2134.py  0005_alter_artists_id.py  0005_auto_20221006_1656.py  0006_auto_20221006_1740.py  0007_auto_20221006_2135.py  0008_auto_20221006_2139.py  0009_auto_20221015_0224.py
artists/tests/: test_views.py
authentication/: tests.py
authentication/tests/: test_endpoints.py  test_views.py
env/Scripts/: activate  activate.bat
musicplatform/: __init__.py  celery.py  settings.py  urls.py
static/: index.css
templates/: artists.html  home.html  login.html  new_album.html  new_artist.html  signup.html
templates/sending/: send.html
users/: models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_bio.py  0002_alter_customuser_email_alter_customuser_password1_and_more.py  0003_alter_customuser_email_alter_customuser_password1_and_more.py
users/tests/: test_endpoints.py  test_views.py
users/tests/fixtures/: users.json  users.yaml
