[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = ""
authors = ["Hossam Hassan <61355308+hossam4455@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
Pillow = "^9.2.0"
django-imagekit = "^4.1.0"
django-model-utils = "^4.2.0"
django-widget-tweaks = "^1.4.12"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
django-extensions = "^3.2.1"
virtualenv = "^20.16.6"
django-rest-knox = "^4.2.0"
PyJWT = "^2.6.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
celery = {extras = ["redis"], version = "^5.2.7"}
redis = "^4.3.4"
django-celery-beat = "^2.4.0"
django-environ = "^0.9.0"
env = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
