[tool.poetry]
name = "musicplatform"
version = "0.1.0"
description = ""
authors = ["Hossam Hassan <61355308+hossam4455@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
